refactor: 오프셋 방식의 페이지네이션 적용