@@ -4,17 +4,18 @@ import com.study.delivery.domain.order.order.dao.OrderMenuRepository;
 import com.study.delivery.domain.order.order.dao.OrderRepository;
 import com.study.delivery.domain.order.order.dto.response.OrderMenuResponse;
 import com.study.delivery.domain.order.order.dto.response.OrderResponse;
-import com.study.delivery.domain.order.order.entity.OrderMenu;
+import com.study.delivery.domain.order.order.entity.Order;
 import com.study.delivery.domain.restaurant.dao.RestaurantRepository;
 import com.study.delivery.domain.restaurant.entity.Restaurant;
 import com.study.delivery.global.exception.BusinessException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import java.time.LocalDate;
 
 @Service
 @RequiredArgsConstructor
@@ -25,17 +26,20 @@ public class RestaurantServiceImpl implements RestaurantService {
     private final OrderMenuRepository orderMenuRepository;
 
     @Override
-    public List<OrderResponse> getRestaurantOrders(Long restaurantId) {
+    public Page<OrderResponse> getRestaurantOrders(Long restaurantId,
+                                                   LocalDate start,
+                                                   LocalDate end,
+                                                   Pageable pageable) {
         Restaurant restaurant = restaurantRepository.findById(restaurantId)
                 .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "존재하지 않는 가게입니다."));
 
-        return orderRepository.findAllByRestaurant(restaurant).stream()
-                .map(order -> {
-                    List<OrderMenu> orderMenus = orderMenuRepository.findAllByOrder(order);
-                    List<OrderMenuResponse> orderMenuResponses =
-                            orderMenus.stream().map(OrderMenuResponse::of).toList();
+        Page<Order> pageOrders = orderRepository.findAllByRestaurantAndCreatedAtBetween(restaurant,
+                start.atStartOfDay(),
+                end.atTime(23, 59, 59),
+                pageable);
 
-                    return OrderResponse.of(order, orderMenuResponses);
-                }).collect(Collectors.toList());
+        return pageOrders.map(order ->
+                OrderResponse.of(order, order.getOrderMenus().stream().map(OrderMenuResponse::of).toList())
+        );
     }
 }
